# duckair

./: .gitignore  Cargo.toml  README.md  main.rs
02_data_types/: main.rs
03_data_types/: main.rs
04_operators/: main.rs
04_variables/: main.rs
05_control_flow/: main.rs
06_control_flow/: main.rs
07_ownership_borrowing/: main.rs
08_functions/: dummy.md  main.rs
09_data_structures/: main.rs
10_collections/: main.rs
11_generics/: main.rs
12_concurrency/: main.rs
13_module/: Cargo.toml  README.md  main.rs
91_project/: main.rs
92_project/: main.rs
93_project/: geo.rs  main.rs
99_rust_book/07_modules/: main.rs  modules.rs
99_rust_book/07_modules/modules/: hosting.rs
99_rust_book/08_collections/: main.rs
99_rust_book/10_1_traits/: main.rs
99_rust_book/10_3_lifetimes/: main.rs
99_rust_book/10_traits/: main.rs
99_rust_book/11_tests/: README.md
99_rust_book/11_tests/src/: lib.rs
99_rust_book/11_tests/tests/: integration_test.rs
99_rust_book/11_tests/tests/common/: mod.rs
99_rust_book/12_cli_app/src/: lib.rs  main.rs
99_rust_book/13_1_closures/: main.rs
99_rust_book/13_2_iterators/: main.rs
99_rust_book/13_3_cli_app_iterators/: Cargo.toml
99_rust_book/13_3_cli_app_iterators/src/: lib.rs  main.rs
99_rust_book/14_crates/: Cargo.toml
99_rust_book/14_crates/src/: lib.rs  main.rs
99_rust_book/15_1_box_smart_pointers/: main.rs
99_rust_book/15_2_deref_trait/: main.rs
99_rust_book/15_3_drop_trait/: main.rs
99_rust_book/15_4_reference_counting/: main.rs
99_rust_book/15_5_interior_mutability/: main.rs
99_rust_book/15_6_reference_cycles/: main.rs
99_rust_book/16_2_threads_messages/: main.rs
99_rust_book/16_3_threads_state/: main.rs
99_rust_book/17_1_oo_programming/: main.rs
99_rust_book/17_2_trait_objects/src/: lib.rs  main.rs
99_rust_book/17_3_state_pattern/src/: lib.rs  main.rs
99_rust_book/18_1_pattern_matching/: main.rs
99_rust_book/18_2_pattern_syntax/: main.rs
99_rust_book/19_1_unsafe/: main.rs
99_rust_book/19_2_advanced_traits/: main.rs
99_rust_book/19_3_advanced_types/: main.rs
99_rust_book/19_4_advanced_functions/: main.rs
99_rust_book/19_5_macros/: Cargo.toml
99_rust_book/19_5_macros/hello_macro/hello_macro_derive/: Cargo.toml
99_rust_book/19_5_macros/hello_macro/hello_macro_derive/src/: lib.rs
99_rust_book/19_5_macros/src/: lib.rs  main.rs
99_rust_book/20_1_server/: 404.html  index.html
99_rust_book/20_1_server/src/: main.rs
