[package]
name = "duckair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "duckair"
path = "main.rs"

[[bin]]
name = "data_types"
path = "03_data_types/main.rs"

[[bin]]
name = "variables"
path = "04_variables/main.rs"

[[bin]]
name = "operators"
path = "05_operators/main.rs"

[[bin]]
name = "control_flow"
path = "06_control_flow/main.rs"

[[bin]]
name = "ownership"
path = "07_ownership_borrowing/main.rs"

[[bin]]
name = "functions"
path = "08_functions/main.rs"

[[bin]]
name = "data_structures"
path = "09_data_structures/main.rs"

[[bin]]
name = "collections"
path = "10_collections/main.rs"

[[bin]]
name = "generics"
path = "11_generics/main.rs"

[[bin]]
name = "project_1"
path = "91_project/main.rs"

[[bin]]
name = "project_2"
path = "92_project/main.rs"
