[package]
name = "duckair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.1"

# Required for rust-analyzer and clippy to work in VSCode when multiple Cargo.toml files are stored in the repo
[workspace]
members = [
    "13_module",
    "99_rust_book/11_tests",
    "99_rust_book/12_cli_app"
]

[[bin]]
name = "data_types"
path = "03_data_types/main.rs"

[[bin]]
name = "variables"
path = "04_variables/main.rs"

[[bin]]
name = "operators"
path = "05_operators/main.rs"

[[bin]]
name = "control_flow"
path = "06_control_flow/main.rs"

[[bin]]
name = "ownership"
path = "07_ownership_borrowing/main.rs"

[[bin]]
name = "functions"
path = "08_functions/main.rs"

[[bin]]
name = "data_structures"
path = "09_data_structures/main.rs"

[[bin]]
name = "collections"
path = "10_collections/main.rs"

[[bin]]
name = "generics"
path = "11_generics/main.rs"

[[bin]]
name = "concurrency"
path = "12_concurrency/main.rs"

[[bin]]
name = "project_1"
path = "91_project/main.rs"

[[bin]]
name = "project_2"
path = "92_project/main.rs"

[[bin]]
name = "project_3"
path = "93_project/main.rs"

[[bin]]
name = "b_modules"
path = "99_rust_book/07_modules/main.rs"

[[bin]]
name = "b_collections"
path = "99_rust_book/08_collections/main.rs"

[[bin]]
name = "b_traits"
path = "99_rust_book/10_1_traits/main.rs"

[[bin]]
name = "b_lifetimes"
path = "99_rust_book/10_3_lifetimes/main.rs"

[[bin]]
name = "b_closures"
path = "99_rust_book/13_1_closures/main.rs"

[[bin]]
name = "b_iterators"
path = "99_rust_book/13_2_iterators/main.rs"
