[package]
name = "duckair"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.1"

# Required for rust-analyzer and clippy to work in VSCode when multiple Cargo.toml files are stored in the repo
[workspace]
members = [
    "13_module",
    "99_rust_book/11_tests",
    "99_rust_book/12_cli_app",
    "99_rust_book/13_3_cli_app_iterators",
    "99_rust_book/14_crates",
    "99_rust_book/17_2_trait_objects",
    "99_rust_book/17_3_state_pattern",
]

# Rust offers two release profiles: dev (cargo --build) and release (cargo build --release).
# These profiles can be tuned with a number: the lower the number, the lesser the optimization
# and consequently, the faster the build. Below are the default values (0 for the dev profile
# makes sense as you want fast builds when you write code).
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "data_types"
path = "03_data_types/main.rs"

[[bin]]
name = "variables"
path = "04_variables/main.rs"

[[bin]]
name = "operators"
path = "05_operators/main.rs"

[[bin]]
name = "control_flow"
path = "06_control_flow/main.rs"

[[bin]]
name = "ownership"
path = "07_ownership_borrowing/main.rs"

[[bin]]
name = "functions"
path = "08_functions/main.rs"

[[bin]]
name = "data_structures"
path = "09_data_structures/main.rs"

[[bin]]
name = "collections"
path = "10_collections/main.rs"

[[bin]]
name = "generics"
path = "11_generics/main.rs"

[[bin]]
name = "concurrency"
path = "12_concurrency/main.rs"

[[bin]]
name = "project_1"
path = "91_project/main.rs"

[[bin]]
name = "project_2"
path = "92_project/main.rs"

[[bin]]
name = "project_3"
path = "93_project/main.rs"

[[bin]]
name = "b_modules"
path = "99_rust_book/07_modules/main.rs"

[[bin]]
name = "b_collections"
path = "99_rust_book/08_collections/main.rs"

[[bin]]
name = "b_traits"
path = "99_rust_book/10_1_traits/main.rs"

[[bin]]
name = "b_lifetimes"
path = "99_rust_book/10_3_lifetimes/main.rs"

[[bin]]
name = "b_closures"
path = "99_rust_book/13_1_closures/main.rs"

[[bin]]
name = "b_iterators"
path = "99_rust_book/13_2_iterators/main.rs"

[[bin]]
name = "b_box"
path = "99_rust_book/15_1_box_smart_pointers/main.rs"

[[bin]]
name = "b_deref"
path = "99_rust_book/15_2_deref_trait/main.rs"

[[bin]]
name = "b_drop"
path = "99_rust_book/15_3_drop_trait/main.rs"

[[bin]]
name = "b_rc"
path = "99_rust_book/15_4_reference_counting/main.rs"

[[bin]]
name = "b_refcell"
path = "99_rust_book/15_5_interior_mutability/main.rs"

[[bin]]
name = "b_cycles"
path = "99_rust_book/15_6_reference_cycles/main.rs"

[[bin]]
name = "b_threads_msgs"
path = "99_rust_book/16_2_threads_messages/main.rs"

[[bin]]
name = "b_threads_state"
path = "99_rust_book/16_3_threads_state/main.rs"

[[bin]]
name = "b_oop"
path = "99_rust_book/17_1_oo_programming/main.rs"

[[bin]]
name = "b_patterns"
path = "99_rust_book/18_1_pattern_matching/main.rs"

[[bin]]
name = "b_pattern_syntax"
path = "99_rust_book/18_2_pattern_syntax/main.rs"

[[bin]]
name = "b_unsafe"
path = "99_rust_book/19_1_unsafe/main.rs"

[[bin]]
name = "b_a_traits"
path = "99_rust_book/19_2_advanced_traits/main.rs"
