[package]
# procedural macros need to be defined inside their own crate
name = "hello_macro_derive" # the convention with custom-derived macro crates is to name them: "$PARENT_CRATE_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true # this tells cargo that this is a procedural macro crate

[dependencies]
syn = "1.0"
quote = "1.0"
